[package]
name = "lidar-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand = "0.8.5"
# crc16 = "0.4.0"
crc = "3.0.1"
# byteorder = "1.5.0"
# bincode = "1.3.3"
# serde = "1.0.195"
crc32fast = "1.3.2"
anyhow = "1.0.79"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "serialize_benchmark"
harness = false

