[package]
name = "livox_lidar_rs"
version = "0.1.0"
edition = "2021"
authors = ["Ayaya <shioriaya@foxmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.0.1"
bincode = "1.3.3"
serde = { version = "1.0.195", features = ["derive"] }
crc32fast = "1.3.2"
anyhow = "1.0.79"
crossterm = "0.27.0"
ratatui = "0.26.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "serialize_benchmark"
harness = false
