[package]
name = "intelligent_sight_lib"
version = "0.1.0"
edition = "2021"
authors = ["Aya <shioriaya@foxmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ctrlc = "3.4.4"
# log = "0.4.21"

[build-dependencies]
glob = "0.3.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "shared_buffer_bench"
harness = false

[[bench]]
name = "cuda_bench"
harness = false

[[bench]]
name = "cam_bench"
harness = false

[[bench]]
name = "infer_bench"
harness = false

[[bench]]
name = "postprocess_bench"
harness = false
